[package]
name = "quinn-boring2"
version = { workspace = true }
authors = ["0x676e67 <gngppz@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = { workspace = true }
repository = { workspace = true }
description = "BoringSSL crypto provider for quinn"
keywords = ["quic"]
categories = ["network-programming", "asynchronous"]
rust-version = "1.85"

[badges]
maintenance = { status = "passively-maintained" }

[features]
default = ["runtime-tokio"]

runtime-tokio = ["quinn/runtime-tokio"]

# Use a FIPS-validated version of boringssl.
fips = ["boring/fips", "boring-sys/fips"]

# Use a FIPS build of BoringSSL, but don't set "fips-compat".
#
# As of boringSSL commit a430310d6563c0734ddafca7731570dfb683dc19, we no longer
# need to make exceptions for the types of BufLen, ProtosLen, and ValueLen,
# which means the "fips-compat" feature is no longer needed.
#
# TODO(cjpatton) Delete this feature and modify "fips" so that it doesn't imply
# "fips-compat".
fips-precompiled = ["boring/fips-precompiled"]

# Link with precompiled FIPS-validated `bcm.o` module.
fips-link-precompiled = [
    "boring/fips-link-precompiled",
    "boring-sys/fips-link-precompiled",
]

# Enables experimental post-quantum crypto (https://blog.cloudflare.com/post-quantum-for-all/)
pq-experimental = ["boring/fips", "boring-sys/fips"]

[dependencies]
boring = { workspace = true }
boring-sys = { workspace = true }
bytes = "1"
foreign-types-shared = "0.3"
lru = "0.16"
quinn = { version = "0.11.8", default-features = false }
quinn-proto = { version = "0.11.12", default-features = false }
rand = "0.9.2"
tracing = "0.1"

[dev-dependencies]
anyhow = "1.0"
assert_matches = "1"
clap = { version = "4", features = ["derive"] }
directories-next = "2"
hex-literal = "0.4"
rcgen = "0.13"
rustls-pemfile = "2"
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "time",
    "macros",
    "sync",
] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
    "ansi",
    "time",
    "local-time",
] }
url = "2"
h3 = "0.0.8"
h3-quinn = "0.0.10"
http = "1"
http-body = "1.0.1"
http-body-util = "0.1.3"
futures-core = "0.3"

[[example]]
name = "client"
required-features = ["runtime-tokio"]
