[package]
name = "tokio-boring2"
version = { workspace = true }
authors = ["0x676e67 <gngppz@gmail.com>", "Alex Crichton <alex@alexcrichton.com>", "Ivan Nikulin <ifaaan@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = { workspace = true }
repository = { workspace = true }
homepage = "https://github.com/0x676e67/boring2"
documentation = "https://docs.rs/tokio-boring2"
description = """
An implementation of SSL streams for Tokio backed by BoringSSL
"""

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["read_uninit"]

# Use a FIPS-validated version of boringssl.
fips = ["boring/fips"]

# Add a prefix to all symbols in libcrypto and libssl to prevent conflicts
# with other OpenSSL or BoringSSL versions that might be linked in the same process.
prefix-symbols = ["boring/prefix-symbols"]

read_uninit = []

[dependencies]
boring = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
tokio = { workspace = true, features = [ "full" ] }
anyhow = { workspace = true }
criterion = { version = "0.8.1", features = ["async_tokio", "html_reports"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2.0"

[[bench]]
name = "io"
harness = false
